# sleepstack

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  make_binaural.py  mix_binaural_with_ambience.py  pyproject.toml  pytest.ini  vibe_binaural.py
.cursor/rules/: 101-git-commit-msg.mdc  103-docs-checklist.mdc  104-docs-checklist-process.mdc
.github/workflows/: ci.yml
_docs/: binaural-examples.md  example-script.md  subconscious-metaprogramming-v1.md  testing-ci-locally.md  user-guide.md  uv-restructure-checklist.md
_docs/informational/: nightly-stack-v2.md  sleep-affirmation-primer.md
_docs/technical/: troubleshooting.md  user-guide.md
_docs/todo/: yt-dlp-download-sections-bug.md
assets/ambience/: ambient_metadata.json
src/sleepstack/: __init__.py  ambient_manager.py  asset_manager.py  cli.py  config.py  download_ambient.py  main.py  make_binaural.py  mix_binaural_with_ambience.py  state_manager.py  vibe_binaural.py
tests/: __init__.py  create_fixture.py  test_main.py
tests/integration/: test_config_state_integration.py
tests/unit/: test_ambient_manager.py  test_asset_manager.py  test_basic_functionality.py  test_cleanup_assets.py  test_cli.py  test_config.py  test_config_command.py  test_config_parser.py  test_download_ambient_command.py  test_download_ambient_core.py  test_init.py  test_list_ambient_command.py  test_main.py  test_make_binaural.py  test_mix_binaural_with_ambience.py  test_remove_ambient.py  test_repair_assets.py  test_state_command.py  test_state_manager.py  test_state_parser.py  test_validate_assets.py  (+1 more)
(+17 files in other folders)
